# FastAPI-Feature-rich-Template

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.example  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  labeler.yml  settings.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-failing-test.yml  3-docs-bug.yml  4-feature-request.yml  5-enhancement-request.yml  6-security-report.md  6-security-report.yml  config.yml
.github/workflows/: add-to-project.yml  issue-manager.yml  labeler.yml  latest-changes.yml  pre-commit.yml  tests.yml
app/: __main__.py  log.py  settings.py  tkq.py
app/actions/: create_superuser.py
app/adapters/kafka/: dependencies.py  lifespan.py
app/adapters/rabbit/: dependencies.py
app/adapters/redis/: dependency.py
app/controller/api/: router.py
app/controller/api/docs/: __init__.py
app/controller/api/dummy/: __init__.py  schema.py  views.py
app/controller/api/echo/: __init__.py  views.py
app/controller/api/kafka/: __init__.py  views.py
app/controller/api/monitoring/: __init__.py
app/controller/api/rabbit/: __init__.py  views.py
app/controller/api/redis/: __init__.py  views.py
app/controller/api/users/: __init__.py
app/controller/errors/: error_responses.py  exception_manager.py  exception_mapper.py
app/controller/utils/: pagination.py  query_parameters.py
app/core/: application.py  config.py  gunicorn_runner.py  lifespan.py  logger.py  security.py  tkq.py
app/db/: dependencies.py  meta.py  utils.py
app/db/dao/: __init__.py  base.py  dummy_dao.py
app/db/migrations/: env.py
app/db/models/: __init__.py  base.py  dummy_model.py  jwt_token.py  users.py
app/services/: exeptions.py
app/services/dummy/: mapper.py  service.py
app/services/kafka/: dependencies.py  lifespan.py
app/services/rabbit/: dependencies.py  lifespan.py
app/services/redis/: dependency.py  lifespan.py
app/web/: application.py  lifespan.py
app/web/api/: router.py
app/web/api/dummy/: views.py
app/web/api/echo/: views.py
app/web/api/kafka/: __init__.py  views.py
app/web/api/rabbit/: views.py
app/web/api/redis/: views.py
app/web/api/users/: views.py
deploy/: docker-compose.dev.yml  docker-compose.otlp.yml  otel-collector-config.yml
deploy/docker/: docker-compose.dev.yml  docker-compose.opentelemetry.yml  docker-compose.prometheus.yml  docker-compose.traefik.yml
deploy/grafana/: README.md  grafana.ini
deploy/grafana/provisioning/alerting/: demo-service-alerting.yml
deploy/grafana/provisioning/dashboards/: demo.yaml
deploy/grafana/provisioning/datasources/: opensearch.yaml
deploy/kube/: app.yml  db.yml  namespace.yml  rabbit.yml  redis.yml
deploy/kubernetes/: app.yml  rabbit.yml  redis.yml
docs/: release-notes.md
src/: gunicorn_runner.py  log.py  main.py  settings.py  tkq.py
src/services/kafka/: dependencies.py  lifespan.py
src/services/rabbit/: dependencies.py  lifespan.py
src/services/redis/: dependency.py
src/web/: application.py  lifespan.py
src/web/api/: router.py
src/web/api/echo/: views.py
tests/: conftest.py  test_dummy.py  test_kafka.py
(+22 files in other folders)
